--- a/site/package.json
+++ b/site/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "mean",
-    "description": "MEAN - A Modern Stack: MongoDB, ExpressJS, AngularJS, NodeJS. (BONUS: Passport User Support).",
+    "name": "lockie",
+    "description": "The World first smart BLE padlock you will falling love with",
     "version": "0.1.0",
-    "private": false,
-    "author": "Amos Haviv",
+    "private": true,
+    "author": "Yutong Pei",
     "repository": {
         "type": "git",
         "url": "https://github.com/linnovate/mean.git"
