--- a/site/package.json
+++ b/site/package.json
@@ -6,7 +6,7 @@
     "author": "Yutong Pei",
     "repository": {
         "type": "git",
-        "url": "https://github.com/linnovate/mean.git"
+        "url": "https://github.com/yutongp/lockie.git"
     },
     "engines": {
         "node": "0.10.x",
